--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -153,7 +153,7 @@ The Spock Team
 * https://github.com/Fuud[Fedor Bobin]
 * https://github.com/leonard84[Leonard Brünings]
 * https://github.com/cetnar[cetnar]
-* http://ldaley.com[Luke Daley]
+* https://github.com/ldaley[Luke Daley]
 * https://github.com/daviddawson[David Dawson]
 * https://github.com/selenium34[Scott G]
 * https://github.com/msgilligan[Sean Gilligan]
