--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -18,8 +18,7 @@ To learn more about unit testing, go to http://en.wikipedia.org/wiki/Unit_testin
 Let's start with a few definitions: Spock lets you write https://en.wikipedia.org/wiki/Specification_by_example[_specifications_]
 that describe expected _features_ (properties, aspects) exhibited by a system of interest. The system of interest could be
 anything between a single class and a whole application, and is also called the _system under specification or SUS_.
-The description of a feature starts from a specific snapshot of the SUS and its collaborators; this snapshot is called
-the feature's _fixture_.
+The description of a feature starts from a specific snapshot of the SUS and its collaborators; this snapshot is called the feature's _fixture_.
 
 The following sections walk you through all building blocks of which a Spock specification may be composed. A typical
 specification uses only a subset of them.
@@ -137,7 +136,7 @@ interacting feature methods), and may occur more than once.
 Spock has built-in support for implementing each of the conceptual phases of a feature method. To this end, feature
 methods are structured into so-called _blocks_. Blocks start with a label, and extend to the beginning of the next block,
 or the end of the method. There are six kinds of blocks: `given`, `when`, `then`, `expect`, `cleanup`, and `where` blocks.
-Any statements between the beginning of the method and the first explicit block belong to an implicit `given` given block.
+Any statements between the beginning of the method and the first explicit block belong to an implicit `given` block.
 
 A feature method must have at least one explicit (i.e. labelled) block - in fact, the presence of an explicit block is
 what makes a method a feature method. Blocks divide a method into distinct sections, and cannot be nested.
@@ -159,7 +158,7 @@ def stack = new Stack()
 def elem = "push me"
 ----
 
-The `given` block is where you do any configuration for the feature that you are describing. It may not be preceded by
+The `given` block is where you do any setup work for the feature that you are describing. It may not be preceded by
 other blocks, and may not be repeated. A `given` block doesn't have any special semantics. The `given:` label is
 optional and may be omitted, resulting in an _implicit_ `given` block. Originally, the alias `setup:` was the preferred block name,
 but using `given:` often leads to a more readable feature method description (see <<specifications_as_documentation,Specifications as Documentation>>).
@@ -312,9 +311,8 @@ the method will also fail if any other exception is thrown.
 ===== Interactions
 
 Whereas conditions describe an object's state, interactions describe how objects communicate with each other.
-Interactions and Interaction based testing are described in a separate <<interaction_based_testing.adoc#,chapter>>,
-so we only give a quick example here. Suppose we want to describe the flow of events from a publisher to its subscribers.
-Here is the code:
+Interactions and Interaction based testing are described in a separate <<interaction_based_testing.adoc#,chapter>>, so we only give a quick example here.
+Suppose we want to describe the flow of events from a publisher to its subscribers. Here is the code:
 
 [source,groovy]
 ----
@@ -603,20 +601,17 @@ activated by annotations called _directives_. Currently, Spock ships with the fo
 
 `@Ignore`:: Ignores any feature method carrying this annotation.
 
-`@IgnoreRest`:: Any feature method carrying this annotation will be executed, all others will be ignored. Useful
-for quickly running just a single method.
+`@IgnoreRest`:: Any feature method carrying this annotation will be executed, all others will be ignored. Useful for quickly running just a single method.
 
-`@FailsWith`:: Expects a feature method to complete abruptly. `@FailsWith` has two use cases: First, to document
-known bugs that cannot be resolved immediately. Second, to replace exception conditions in certain corner cases
-where the latter cannot be used (like specifying the behavior of exception conditions). In all other cases,
-exception conditions are preferable.
+`@FailsWith`:: Expects a feature method to complete abruptly. `@FailsWith` has two use cases: First, to document known bugs that cannot
+be resolved immediately. Second, to replace exception conditions in certain corner cases where the latter cannot be
+used (like specifying the behavior of exception conditions). In all other cases, exception conditions are preferable.
 
 Go to the <<extensions.adoc#,Extensions>> chapter to learn how to implement your own directives and extensions.
 
 == Comparison to JUnit
 
-Although Spock uses a different terminology, many of its concepts and features are inspired by JUnit. Here is a rough
-comparison:
+Although Spock uses a different terminology, many of its concepts and features are inspired by JUnit. Here is a rough comparison:
 
 |===
 |Spock                 |JUnit
