Added missing link fix per comment on Pull Request #786.

--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -540,6 +540,8 @@ with(service) {
   1 * stop()
 }
 ----
+
+[[specifications_as_documentation]]
 == Specifications as Documentation
 
 Well-written specifications are a valuable source of information. Especially for higher-level specifications targeting
