--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -1,6 +1,12 @@
 = Release Notes
 include::include.adoc[]
 
+== 1.2-RC2 (tbd)
+
+=== What's New In This release
+
+* The `@Retry` extension can now be configured to evaluate a `condition` (<<extensions.adoc#_retry,Docs>>)
+
 == 1.2-RC1 (2018-08-14)
 
 Breaking Changes: Spock 1.2 drops support for Java 6, Groovy 2.0 and Groovy 2.3
