Ensure successful retry makes test succeed
When using `Retry.Mode.{SETUP_FEATURE_CLEANUP, FEATURE}`, a failed
iteration always made a test fail even when a retry was successful.

Fixes #876.

--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -5,7 +5,8 @@ include::include.adoc[]
 
 === What's New In This release
 
-* The `@Retry` extension can now be configured to evaluate a `condition` (<<extensions.adoc#_retry,Docs>>)
+* Add configurable `condition` to `@Retry` extension to allow for customizing when retries should be attempted (<<extensions.adoc#_retry,Docs>>)
+* Fix `Retry.Mode.FEATURE` and `Retry.Mode.SETUP_FEATURE_CLEANUP` to make a test pass if a retry was successful.
 
 == 1.2-RC1 (2018-08-14)
 
