--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -106,7 +106,7 @@ Note that `setupSpec()` and `cleanupSpec()` _may not_ reference instance fields 
 If fixture methods are overridden in a specification subclass then `setup()` of the superclass will run before `setup()` of the subclass.
 `cleanup()` works in reverse order, that is `cleanup()` of the subclass will execute before `cleanup()` of the superclass.
 `setupSpec()` and `cleanupSpec()` behave in the same way.
-There is no need to explicitly call `super.setup()` or `super.cleanup()` as Spock will automatically find and execute fixture methods at all levels in an inheritance heirarchy.
+There is no need to explicitly call `super.setup()` or `super.cleanup()` as Spock will automatically find and execute fixture methods at all levels in an inheritance hierarchy.
 
 == Feature Methods
 
