Add optional reason to @PendingFeature (#907)

--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -6,6 +6,8 @@ include::include.adoc[]
 
 === What's New In This release
 
+* Improve `@PendingFeature` to now have an optional `reason` attribute
+
 == 1.2-RC2 (2018-09-04)
 
 === What's New In This release
