Prepare next iteration

--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -2,6 +2,10 @@
 include::include.adoc[]
 
 
+== 1.2-RC4 (tbd)
+
+=== What's New In This release
+
 == 1.2-RC3 (2018-09-16)
 
 === What's New In This release
