A la carte mock needs an IDefaultResponse instance for 'defaultResponse', not a type
See also https://stackoverflow.com/a/57305121/1082681

--- a/docs/interaction_based_testing.adoc
+++ b/docs/interaction_based_testing.adoc
@@ -968,7 +968,7 @@ can be passed as named arguments to the `Mock()` method. For example:
 
 [source,groovy]
 ----
-def person = Mock(name: "Fred", type: Person, defaultResponse: ZeroOrNullResponse, verified: false)
+def person = Mock(name: "Fred", type: Person, defaultResponse: ZeroOrNullResponse.INSTANCE, verified: false)
 ----
 
 Here, we create a mock whose default return values match those of a `Mock()`, but whose invocations aren't
