--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -632,10 +632,10 @@ Spock directly supports this style of specification with the `given:` label:
 given: "an empty bank account"
 // ...
 
-when: "the account is credited $10"
+when: "the account is credited \$10"
 // ...
 
-then: "the account's balance is $10"
+then: "the account's balance is \$10"
 // ...
 ----
 
