--- a/docs/interaction_based_testing.adoc
+++ b/docs/interaction_based_testing.adoc
@@ -805,6 +805,11 @@ Note that we don't have to pass the `message` argument along; this is taken care
 returns the real invocation's result, but in this example we opted to return our own result instead.
 If we had wanted to pass a different message to the real method, we could have used `callRealMethodWithArgs("changed message")`.
 
+Please note that while semantically both `callRealMethod()` and `callRealMethodWithArgs(...)` only make sense with spies,
+technically you can also call these methods on mock or stub objects, kind of turning them into (pseudo) spy objects
+"through the backdoor". The only precondition is that the mocked/stubbed object actually has a real method implementation,
+i.e. for interface mocks there must be a default method, for class mocks there must be a (non-abstract) original method.
+
 [[PartialMocks]]
 === Partial Mocks
 
@@ -963,7 +968,7 @@ can be passed as named arguments to the `Mock()` method. For example:
 
 [source,groovy]
 ----
-def person = Mock(name: "Fred", type: Person, defaultResponse: ZeroOrNullResponse, verified: false)
+def person = Mock(name: "Fred", type: Person, defaultResponse: ZeroOrNullResponse.INSTANCE, verified: false)
 ----
 
 Here, we create a mock whose default return values match those of a `Mock()`, but whose invocations aren't
