--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -10,5 +10,6 @@ include::include.adoc[]
 . <<modules.adoc#,Modules>>
 . <<release_notes.adoc#,Release Notes>>
 . <<migration_guide.adoc#,Migration Guide>>
+. <<known_issues.adoc#,Known Issues>>
 
 <<all_in_one.adoc#,Single Page Documentation>>
